--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	},
 	"dependencies": {
 		"formidable": "^3.5.4",
-		"html2canvas": "^1.4.1"
+		"html2canvas": "^1.4.1",
+		"html2pdf.js": "^0.10.3"
 	}
 }
