--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/vite": "^4.0.0",
+		"playwright": "^1.54.2",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
@@ -28,7 +29,10 @@
 	"dependencies": {
 		"dom-to-image-more": "^3.6.0",
 		"formidable": "^3.5.4",
+		"html-to-image": "^1.11.13",
 		"html2canvas": "^1.4.1",
-		"html2pdf.js": "^0.10.3"
+		"html2pdf.js": "^0.10.3",
+		"puppeteer": "^24.16.0",
+		"sharp": "^0.34.3"
 	}
 }
